--- a/project-zizi-show.html
+++ b/project-zizi-show.html
@@ -112,7 +112,8 @@
 							</p>
 							<p>
 								<small>
-									More information at <a id="show" target="_blank" href="https://zizi.ai/about">zizi.ai/about</a>
+									More information at <a id="show" target="_blank"
+										href="https://zizi.ai/about">zizi.ai/about</a>
 									and on <a id="show" target="_blank" href="https://newreal.cc/">The New Real</a>
 								</small>
 							</p>
@@ -133,38 +134,44 @@
 							<p>
 								<b>Credits</b>
 							</p><small>
-							<ul style="line-height: 1.6rem;">
-								<li>
-									<b><a id="show" target="_blank" href="https://www.jakeelwes.com/">Jake Elwes</b></a>
-									- Artist, Coder
-									&amp; Producer
-								</li>
-								<li>
-									<b><a id="show" target="_blank"
-											href="https://www.instagram.com/methedragqueen">Me</b></a> -
-									Director of Drag
-								</li>
-								<li>
-									<b><a id="show" target="_blank" href="https://alxhill.com/">Alexander Hill</b></a> -
-									Web &amp;
-									Development
-								</li>
-								<li>
-									<b><a id="show" target="_blank" href="https://www.tobyelwes.com/">Toby Elwes</b></a>
-									- Camera &amp;
-									Lighting
-								</li>
-								<li>
-									<b><a id="show" target="_blank" href="https://soundcloud.com/breakaleeds">Charlie
-											Baker</b></a> -
-									Sound Mixing
-								</li>
-								<li>
-									<b><a id="show" target="_blank" href="https://theappletreelondon.com/#events">The
-											Apple Tree</b></a> -
-									Filming Location (LGBTQ+ Cabaret Venue)
-								</li>
-							</ul></small>
+								<ul style="line-height: 1.6rem;">
+									<li>
+										<b><a id="show" target="_blank" href="https://www.jakeelwes.com/">Jake
+												Elwes</b></a>
+										- Artist, Coder
+										&amp; Producer
+									</li>
+									<li>
+										<b><a id="show" target="_blank"
+												href="https://www.instagram.com/methedragqueen">Me</b></a> -
+										Director of Drag
+									</li>
+									<li>
+										<b><a id="show" target="_blank" href="https://alxhill.com/">Alexander
+												Hill</b></a> -
+										Web &amp;
+										Development
+									</li>
+									<li>
+										<b><a id="show" target="_blank" href="https://www.tobyelwes.com/">Toby
+												Elwes</b></a>
+										- Camera &amp;
+										Lighting
+									</li>
+									<li>
+										<b><a id="show" target="_blank"
+												href="https://soundcloud.com/breakaleeds">Charlie
+												Baker</b></a> -
+										Sound Mixing
+									</li>
+									<li>
+										<b><a id="show" target="_blank"
+												href="https://theappletreelondon.com/#events">The
+												Apple Tree</b></a> -
+										Filming Location (LGBTQ+ Cabaret Venue)
+									</li>
+								</ul>
+							</small>
 							<p><b>Cast</b></p>
 							<small>
 								<a id="show" target="_blank"
@@ -199,8 +206,7 @@
 
 							<small>
 								<p><i>
-										Part of <a id="show" target="_blank"
-											href="https://newreal.cc/">The
+										Part of <a id="show" target="_blank" href="https://newreal.cc/">The
 											New Real</a>
 										by <a id="show" target="_blank"
 											href="https://efi.ed.ac.uk/activity-and-partners/experiential-ai">Edinburgh
@@ -226,10 +232,25 @@
 
 			<div class="desktop-6 pull-3 tablet-12 tablet-pull-0 columns">
 
+				<script>
+					function resizeDivs() {
+						$('#vid').css("height", $('#vid').width() / 1.7777);
+						$('#vid2').css("height", $('#vid2').width() / 1.7777);
+						$('#vid3').css("height", $('#vid3').width() / 1.7777);
+
+					}
+					$(resizeDivs);
+					$(window).resize(resizeDivs);
+				</script>
+
+
+
+				<iframe id="vid" width="100%" height="360" src="https://www.youtube.com/embed/3c5-ABUkI_M"
+					frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+					webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
 				<a id="show" target="_blank" href="https://zizi.ai/"><img src="images/project-zizi-show/full.jpg"
 						style="width:100%; " alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
-
-
 
 				<a id="show" target="_blank" href="https://zizi.ai/"><img src="images/project-zizi-show/controls.jpg"
 						style="width:49%;margin-top:0px" alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
@@ -245,7 +266,17 @@
 						src="images/project-zizi-show/close-browser.jpg" style="width:49%;margin-top:0px"
 						alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
 
-				<br><small>The Zizi Show (2020), stills from zizi.ai</small>
+				<br><small>The Zizi Show (2020), stills from zizi.ai</small><br><br>
+
+				<iframe id="vid2" width="100%" height="360" src="https://www.youtube.com/embed/E8iYStsLF_Y"
+				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+				webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				<small>Welcome to The Zizi Show</small><br><br>
+
+				<iframe id="vid3" width="100%" height="360" src="https://www.youtube.com/embed/Ngpr2lUS1Bk"
+				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+				webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				<small>The Zizi Show - I Am What I Am</small><br>
 
 
 				<img class="border-top" src="images/project-zizi-show/amalgams.jpg" style="width:100%; "
