--- a/news.html
+++ b/news.html
@@ -150,6 +150,10 @@
 				allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 				allowfullscreen></iframe>
 
+			<iframe class="third" src="https://www.youtube.com/embed/3c5-ABUkI_M" frameborder="0"
+				allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
+
 			<iframe class="third" src="https://www.youtube.com/embed/qQSSl533rb8" frameborder="0"
 				allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 				allowfullscreen></iframe>
@@ -159,10 +163,6 @@
 				allowfullscreen></iframe>
 
 			<iframe class="third" src="https://www.youtube.com/embed/QOK97wutH-s" frameborder="0"
-				allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-				allowfullscreen></iframe>
-
-			<iframe class="third" src="https://www.youtube.com/embed/RRew6BCOUok" frameborder="0"
 				allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 				allowfullscreen></iframe>
 
@@ -367,7 +367,8 @@
 							with different media. It presents the first attempts at computer-generated graphics and
 							poetry as well as contemporary works dedicated to the automation of the creative act. It
 							also addresses the material conditions of individual and cultural memory – between erasing
-							and forgetting, storing and remembering. Along side my work Closed Loop (2017), the exhibtion incldues works
+							and forgetting, storing and remembering. Along side my work Closed Loop (2017), the
+							exhibtion incldues works
 							from Ryoji Ikeda, Marina Abramovic, Nam June Paik, Dieter Roth,
 							Andreas Gursky, Bill Viola, Manfred Mohr, Max Ernst, Olafur Eliasson, Pipilotti Rist,
 							Richard Serra, Walter Griers, Christian Boltanski, Joan Jonas and John Cage
