--- a/project-closedLoop.html
+++ b/project-closedLoop.html
@@ -1,9 +1,11 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html lang="en">
+<!--<![endif]-->
+
 <head>
 
 	<!-- Basic Page Needs
@@ -48,16 +50,18 @@
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	<script>
+		(function (i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date(); a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-40831263-1', 'auto');
-  ga('send', 'pageview');
+		ga('create', 'UA-40831263-1', 'auto');
+		ga('send', 'pageview');
 
-</script>
+	</script>
 
 </head>
 
@@ -65,7 +69,7 @@
 
 
 	<nav id="navMenu"></nav>
-<script src="header.js"></script>
+	<script src="header.js"></script>
 
 
 	<!-- Work - Single Page (Left Sidebar)
@@ -78,41 +82,59 @@
 				<div class="sidebar">
 
 					<div class="desktop-6 tablet-12 columns">
-					<!-- <div class="desktop-3 tablet-12 columns"> -->
+						<!-- <div class="desktop-3 tablet-12 columns"> -->
 
 						<div class="box-info">
 							<h3 class="border-top">Closed Loop</h3>
 							<p class="project-desc">2017, 2-channel digital video, 200 minute loop
-</p>
+							</p>
 
 							<p>
 
 
-								Closed Loop is a recording of two artificial intelligence models conversing with each other - one with words<small><sub>1</sub></small> the other with images<small><sub>2</sub></small> - in a never-ending feedback loop. The words of one describe the images of the other, which then seeks to describe the words with a fresh image… Two neural networks getting lost in their own nuances, sparking and branching off each other as they converse in a perpetual game of AI "Exquisite Corpse".<br><br>
+								Closed Loop is a recording of two artificial intelligence models conversing with each
+								other - one with words<small><sub>1</sub></small> the other with
+								images<small><sub>2</sub></small> - in a never-ending feedback loop. The words of one
+								describe the images of the other, which then seeks to describe the words with a fresh
+								image… Two neural networks getting lost in their own nuances, sparking and branching off
+								each other as they converse in a perpetual game of AI "Exquisite Corpse".<br><br>
 
 
-							Closed Loop has had no textual or visual input by the artist  <br><br>
+								Closed Loop has had no textual or visual input by the artist <br><br>
 
-							<small><small>
-							1) DenseCap: Fully Convolutional Localization Networks for Dense Captioning (2016)<br>
-							2) Plug & Play Generative Networks: Conditional Iterative Generation of Images in Latent Space (2016)
-						</small></small>
+								<small><small>
+										1) DenseCap: Fully Convolutional Localization Networks for Dense Captioning
+										(2016)<br>
+										2) Plug & Play Generative Networks: Conditional Iterative Generation of Images
+										in Latent Space (2016)
+									</small></small>
 
 							<h3 class="border-top">Technical</h3>
-							<small>Two neural networks: a language captioning recurrent neural network writing what it sees in the images generated, and a generative neural network generating images responding to the words generated.
-							Two datasets to train the algorithms: a dataset of 4.1 million captioned images to train a language network, and the Imagenet dataset of 14.2 million photographs to train the image generator network.<br>
-							<br>
-					<!-- “What happens when an AI that interprets images in words converses with another AI that interprets words in images?
+							<small>Two neural networks: a language captioning recurrent neural network writing what it
+								sees in the images generated, and a generative neural network generating images
+								responding to the words generated.
+								Two datasets to train the algorithms: a dataset of 4.1 million captioned images to train
+								a language network, and the Imagenet dataset of 14.2 million photographs to train the
+								image generator network.<br>
+								<br>
+								<!-- “What happens when an AI that interprets images in words converses with another AI that interprets words in images?
 					Are the possibilities of comprehension and miscomprehension all that different from what happens when two humans, perhaps from different cultures, meet? Closed Loop works with two different algorithms to enable us to eavesdrop on this eerie conversation. <i>Closed Loop has had no textual or visual input by the artist.</i> <br><br>
 					The conversation which shifts between the logical, to the enigmatic to the frankly incomprehensible, produces constant frissons of surprise and in the end a profound sense of displacement from one’s own settled perceptual self.” -->
 
-<!-- Closed Loop is a recording of two artificial intelligence models conversing with each other - one with words the other with images - in a never-ending feedback loop. The words of one describe the images of the other, which then seeks to describe the words with a fresh image… Two neural networks getting lost in their own nuances, sparking and branching off each other as they converse in a perpetual game of AI "Exquisite Corpse". -->
-“The conversation shifts between the logical, to the enigmatic to the frankly incomprehensible, produces constant frissons of surprise and in the end a profound sense of displacement from one’s own settled perceptual self.” - (<a id=show target="_blank" href="https://www.64bar1.com/">64/1</a>, curatorial collective) <br>
+								<!-- Closed Loop is a recording of two artificial intelligence models conversing with each other - one with words the other with images - in a never-ending feedback loop. The words of one describe the images of the other, which then seeks to describe the words with a fresh image… Two neural networks getting lost in their own nuances, sparking and branching off each other as they converse in a perpetual game of AI "Exquisite Corpse". -->
+								“The conversation shifts between the logical, to the enigmatic to the frankly
+								incomprehensible, produces constant frissons of surprise and in the end a profound sense
+								of displacement from one’s own settled perceptual self.” - (<a id=show target="_blank"
+									href="https://www.64bar1.com/">64/1</a>, curatorial collective) <br>
 
 
-								<br> Special thanks to <a id=show target="_blank" href="http://ouiouioui.space/">Roland Arnoldt</a> (New York based creative technologist and collaborator), and <a id=show  target="_blank" href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their work on GANs.
+								<br> Special thanks to <a id=show target="_blank" href="http://ouiouioui.space/">Roland
+									Arnoldt</a> (New York based creative technologist and collaborator), and <a id=show
+									target="_blank" href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show
+									target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their work on
+								GANs.
 
-</p>
+								</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -137,15 +159,17 @@ Two datasets to train the algorithms: a dataset of 4.1 million captioned images 
 			</div><!-- // .desktop-3 .nested -->
 
 			<div class="clear show-under-tablet"></div>
-<div class="desktop-6 pull-3 tablet-12 tablet-pull-0 columns">
+			<div class="desktop-6 pull-3 tablet-12 tablet-pull-0 columns">
 
 				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-				<iframe id="vid" src="https://player.vimeo.com/video/206500912?color=ffffff&title=0&byline=0&portrait=0" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				<iframe id="vid" src="https://player.vimeo.com/video/206500912?color=ffffff&title=0&byline=0&portrait=0"
+					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
+					allowfullscreen></iframe>
 
 				<script>
 					function resizeDivs() {
-						$('#vid').css("height", $('#vid').width()/1.7777);
+						$('#vid').css("height", $('#vid').width() / 1.7777);
 
 					}
 					$(resizeDivs);
@@ -174,9 +198,9 @@ Two datasets to train the algorithms: a dataset of 4.1 million captioned images 
 
 
 
-		<nav id="footer"></nav>
+	<nav id="footer"></nav>
 
-		<script src="header.js"></script>
+	<script src="header.js"></script>
 	<!-- JS
 	================================================== -->
 	<!--
@@ -193,7 +217,8 @@ Two datasets to train the algorithms: a dataset of 4.1 million captioned images 
 	<script src="js/jquery.custom.js"></script>
 
 
-<!-- End Document
+	<!-- End Document
 ================================================== -->
 </body>
+
 </html>
