--- a/project-digitalWhisper.html
+++ b/project-digitalWhisper.html
@@ -1,9 +1,11 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html lang="en">
+<!--<![endif]-->
+
 <head>
 
 	<!-- Basic Page Needs
@@ -48,16 +50,18 @@
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	<script>
+		(function (i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date(); a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-40831263-1', 'auto');
-  ga('send', 'pageview');
+		ga('create', 'UA-40831263-1', 'auto');
+		ga('send', 'pageview');
 
-</script>
+	</script>
 
 </head>
 
@@ -65,7 +69,7 @@
 
 
 	<nav id="navMenu"></nav>
-<script src="header.js"></script>
+	<script src="header.js"></script>
 
 
 	<!-- Work - Single Page (Left Sidebar)
@@ -81,14 +85,17 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Digital Whispers
-</h3>
-							<p class="project-desc">2016, mixed media (raspberry pi computer, LCD screen, speaker and custom program), 60x50x10 cm
-</p>
-<p>
+							</h3>
+							<p class="project-desc">2016, mixed media (raspberry pi computer, LCD screen, speaker and
+								custom program), 60x50x10 cm
+							</p>
+							<p>
 
-Tweets in a 2 mile radius of the pieces’ installation are displayed on an LCD screen while the computer simultaneously whispers the tweets as a live performance.
+								Tweets in a 2 mile radius of the pieces’ installation are displayed on an LCD screen
+								while the computer simultaneously whispers the tweets as a live performance.
 
-</p>					</div><!-- // .box-info -->
+							</p>
+						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
 
@@ -100,14 +107,31 @@ Tweets in a 2 mile radius of the pieces’ installation are displayed on an LCD 
 			</div><!-- // .desktop-3 .nested -->
 
 			<div class="clear show-under-tablet"></div>
-<div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
-	<img src="images/project-digitalWhisper/Digital Whispers2.jpg" alt="Jake Elwes digital artist" />
-	<img src="images/project-digitalWhisper/Digital Whispers4.jpg"  alt="Jake Elwes digital artist" />
-<br><br>
-				<video controls autoplay loop  style="width: 100%;">
+			<div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
+
+
+				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+				<iframe id="vid" src="https://player.vimeo.com/video/563772250?color=ffffff&title=0&byline=0&portrait=0"
+					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
+					allowfullscreen></iframe>
+
+				<script>
+					function resizeDivs() {
+						$('#vid').css("height", $('#vid').width() / 1.7777);
+
+					}
+					$(resizeDivs);
+					$(window).resize(resizeDivs);
+				</script>
+				<img src="images/project-digitalWhisper/Digital Whispers4.jpg" alt="Jake Elwes digital artist" />
+
+				<img src="images/project-digitalWhisper/Digital Whispers2.jpg" alt="Jake Elwes digital artist" />
+				<br><br>
+				<!-- <video controls autoplay loop  style="width: 100%;">
 				  <source src="images/project-digitalWhisper/whisperTweets2.mov" type="video/mp4">
 				  Your browser does not support the video tag.
-				</video><br><br>
+				</video><br><br> -->
 
 
 				<!-- <audio controls style="width: 100%;"
@@ -130,9 +154,9 @@ Tweets in a 2 mile radius of the pieces’ installation are displayed on an LCD 
 
 
 
-		<nav id="footer"></nav>
+	<nav id="footer"></nav>
 
-		<script src="header.js"></script>
+	<script src="header.js"></script>
 
 
 	<!-- JS
@@ -160,7 +184,8 @@ Tweets in a 2 mile radius of the pieces’ installation are displayed on an LCD 
 	<script src="js/jquery.custom.js"></script>
 
 
-<!-- End Document
+	<!-- End Document
 ================================================== -->
 </body>
+
 </html>
