--- a/project-latentSpace.html
+++ b/project-latentSpace.html
@@ -1,9 +1,11 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html lang="en">
+<!--<![endif]-->
+
 <head>
 
 	<!-- Basic Page Needs
@@ -48,18 +50,20 @@
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	<script>
+		(function (i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date(); a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-40831263-1', 'auto');
-  ga('send', 'pageview');
+		ga('create', 'UA-40831263-1', 'auto');
+		ga('send', 'pageview');
 
-</script>
+	</script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 
 </head>
@@ -68,7 +72,7 @@
 
 
 	<nav id="navMenu"></nav>
-<script src="header.js"></script>
+	<script src="header.js"></script>
 
 
 	<!-- Work - Single Page (Left Sidebar)
@@ -78,7 +82,7 @@
 
 			<div class="desktop-3 push-6 tablet-12 tablet-push-0 nested columns">
 
-			<!-- <div class="desktop-3 tablet-12 nested columns"> -->
+				<!-- <div class="desktop-3 tablet-12 nested columns"> -->
 
 				<div class="sidebar sticky">
 
@@ -86,21 +90,32 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Latent Space</h3>
-							<p class="project-desc">2017, digital video, 45 minute loop
-</p>
+							<p class="project-desc">2017, digital video, 45 minute loop (2021 iteration - 6 hour loop)
+							</p>
 
 							<p>
 								<!-- What happens when an AI algorithm that has been trained to generate humanly recognisable original images is freed to create images at will? Latent Space is a video snap-shot of a generative adversarial neural network, an AI algorithm trained using 14.2 million photographs, continuously producing new images – a digital subconscious conceiving of new images and visualising a ‘latent space’. -->
-								In artificial intelligence ‘Latent Space’ refers to a mathematical space which maps what a neural network has learnt from training images. Once it has been trained it understands all images of trees as existing in a specific area, and all images of birds in another.<br><br>
+								In artificial intelligence ‘Latent Space’ refers to a mathematical space which maps what
+								a neural network has learnt from training images. Once it has been trained it
+								understands all images of trees as existing in a specific area, and all images of birds
+								in another.<br><br>
 
-								The neural network can be reverse engineered to create fake images from these coordinates<small><sub>1</sub></small>. But what if it was given a new path to travel between these recognisable points, instead moving through the in-between space?<br><br>
+								The neural network can be reverse engineered to create fake images from these
+								coordinates<small><sub>1</sub></small>. But what if it was given a new path to travel
+								between these recognisable points, instead moving through the in-between space?<br><br>
 
-								Latent Space is a video snap-shot of an A.I. algorithm in its infancy trained using 14.2 million photographs<small><sub>2</sub></small> continuously producing new images. <br><br>
+								Latent Space is a video snap-shot of an A.I. algorithm in its infancy trained using 14.2
+								million photographs<small><sub>2</sub></small> continuously producing new images.
+								<br><br>
 
 								<small><small>
-									1) Plug & Play Generative Networks: Conditional Iterative Generation of Images in Latent Space (2016)<br>
-								2) ImageNet: A Large-Scale Hierarchical Image Database (2009)
-								<br>Special thanks to <a id=show  target="_blank" href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their research.</small></small>
+										1) Plug & Play Generative Networks: Conditional Iterative Generation of Images
+										in Latent Space (2016)<br>
+										2) ImageNet: A Large-Scale Hierarchical Image Database (2009)
+										<br>Special thanks to <a id=show target="_blank"
+											href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show
+											target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their
+										research.</small></small>
 
 						</div><!-- // .box-info -->
 
@@ -117,59 +132,68 @@
 
 			<div class="desktop-6 pull-3 tablet-12 tablet-pull-0 columns">
 
-			<!-- <div class="desktop-6 tablet-12 columns" style="text-transform: uppercase;"> -->
-			<script>
-				function resizeDivs() {
-					$('#vid').css("height", $('#vid').width());
-					$('#vid2').css("height", $('#vid2').width()/1.7777);
+				<!-- <div class="desktop-6 tablet-12 columns" style="text-transform: uppercase;"> -->
+				<script>
+					function resizeDivs() {
+						$('#vid21').css("height", $('#vid').width() / 1.7777);
+						$('#vid').css("height", $('#vid').width());
+						$('#vid2').css("height", $('#vid2').width() / 1.7777);
 
-				}
-				$(resizeDivs);
-				$(window).resize(resizeDivs);
-			</script>
-			<iframe id="vid" src="https://player.vimeo.com/video/219526743?autoplay=1&loop=1&title=0&byline=0&portrait=0" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-			<br>
+					}
+					$(resizeDivs);
+					$(window).resize(resizeDivs);
+				</script>
 
-					<!-- <video controls autoplay loop  style="width: 100%;">
+				<h3 class="border-top" style="padding-bottom: 15px;">2021 Iteration</h3>
+
+				<iframe id="vid21"
+					src="https://player.vimeo.com/video/563521786?&loop=1&title=0&byline=0&portrait=0"
+					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
+					allowfullscreen></iframe>
+
+					<p><small>Installlation for <a id=show target="_blank" href="https://www.sculptureinthecity.org.uk/artworks/latent-space/">Sculpture In The City, 2021.</a></small></p>
+					<p style="margin-top: 10px;"><small>For this 6 hour iteration, a new soundscape by <a id=show target="_blank" href="https://open.spotify.com/artist/4PK6Yoxg2Ba8C2KQbysQkM">The Analog Girl</a> was commissioned in partnership with <a id=show target="_blank" href="https://www.mscty.space/project/latent-space">MSCTY</a> x <a id=show target="_blank" href="https://www.sculptureinthecity.org.uk/artworks/latent-space/">Sculpture in the City.</a></small></p>
+					
+					<img src="images/project-latentSpace/Latent Space 2021 Sculpture in the city.jpg" alt="Jake Elwes digital artist Latent Space 2021 Sculpture in the city" />
+					<img style="width: 49.5%;" src="images/project-latentSpace/Latent Space 2021 Sculpture in the city portrait.jpg" alt="Jake Elwes digital artist Latent Space 2021 Sculpture in the city" />
+					<img style="width: 49.5%;" src="images/project-latentSpace/Latent Space 2021 Sculpture in the city portrait 2.jpeg" alt="Jake Elwes digital artist Latent Space 2021 Sculpture in the city" />
+
+				<br><br>
+
+				<h3 class="border-top">2017 Iteration</h3>
+				<br>
+				<iframe id="vid"
+					src="https://player.vimeo.com/video/219526743?loop=1&title=0&byline=0&portrait=0"
+					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
+					allowfullscreen></iframe>
+				<br>
+
+				<!-- <video controls autoplay loop  style="width: 100%;">
 					  <source src="images/project-latentSpace/latentSpace.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video> -->
 
 
 
-					<br>
-					<img src="images/project-latentSpace/latent2.jpg" alt="Jake Elwes digital artist" />
+				<br>
+				<img src="images/project-latentSpace/latent2.jpg" alt="Jake Elwes digital artist" />
 
-					<!-- <img src="images/project-latentSpace/tsne1.jpg" alt="Jake Elwes digital artist" /> -->
-					<!-- <img src="images/project-latentSpace/tsne2.jpg" alt="Jake Elwes digital artist" /> -->
-					<!-- <img src="images/project-latentSpace/tsne3.jpg" alt="Jake Elwes digital artist" /> -->
-					<!-- <img src="images/project-latentSpace/Latent Install.jpg" alt="Jake Elwes digital artist" /> -->
-					<!-- <small> Installation shot from Slade Degree Show, 2017</small> -->
-					<!-- <img src="images/project-latentSpace/Latent Install2.jpg" alt="Jake Elwes digital artist" /> -->
-					<br><br>
-					<iframe id="vid2" width="100%" height="360" src="https://www.youtube.com/embed/uIBBIKRAwl4" frameborder="0" allowfullscreen></iframe>
-					<br>
-					<small><a id="show" href="www.gregory-white.co.uk">Gregory White</a> Modular Synth Performance - <a id="show" href="gregwht.bandcamp.com">Bandcamp,</a> Slade (UCL) May 2017</small>
-					<br>
-					<br>
+				<!-- <img src="images/project-latentSpace/tsne1.jpg" alt="Jake Elwes digital artist" /> -->
+				<!-- <img src="images/project-latentSpace/tsne2.jpg" alt="Jake Elwes digital artist" /> -->
+				<!-- <img src="images/project-latentSpace/tsne3.jpg" alt="Jake Elwes digital artist" /> -->
+				<!-- <img src="images/project-latentSpace/Latent Install.jpg" alt="Jake Elwes digital artist" /> -->
+				<!-- <small> Installation shot from Slade Degree Show, 2017</small> -->
+				<!-- <img src="images/project-latentSpace/Latent Install2.jpg" alt="Jake Elwes digital artist" /> -->
+				<br><br>
+				<iframe id="vid2" width="100%" height="360" src="https://www.youtube.com/embed/uIBBIKRAwl4"
+					frameborder="0" allowfullscreen></iframe>
+				<br>
+				<small><a id="show" href="www.gregory-white.co.uk">Gregory White</a> Modular Synth Performance - <a
+						id="show" href="gregwht.bandcamp.com">Bandcamp,</a> Slade (UCL) May 2017</small>
+				<br>
+				<br>
 
-					<!-- <img src="images/project-latentSpace/Latent Space.jpg" alt="Jake Elwes digital artist" /> -->
-
-					<!-- computer hardware (self-image)
-					<video controls autoplay loop  style="width: 100%;">
-						<source src="images/project-platonicForms/computers.mp4" type="video/mp4">
-						Your browser does not support the video tag.
-					</video>
-					toilets:
-					<video controls autoplay loop  style="width: 100%;">
-						<source src="images/project-platonicForms/toilet.mp4" type="video/mp4">
-						Your browser does not support the video tag.
-					</video>
-					spiritual places &amp; temples:
-					<video controls autoplay loop  style="width: 100%;">
-						<source src="images/project-platonicForms/spiritualSpace.mp4" type="video/mp4">
-						Your browser does not support the video tag.
-					</video> -->
+				<!-- <img src="images/project-latentSpace/Latent Space.jpg" alt="Jake Elwes digital artist" /> -->
 
 			</div><!-- // .desktop-9 -->
 
@@ -181,9 +205,9 @@
 
 
 
-		<nav id="footer"></nav>
+	<nav id="footer"></nav>
 
-		<script src="header.js"></script>
+	<script src="header.js"></script>
 	<!-- JS
 	================================================== -->
 	<!--
@@ -200,7 +224,8 @@
 	<script src="js/jquery.custom.js"></script>
 
 
-<!-- End Document
+	<!-- End Document
 ================================================== -->
 </body>
+
 </html>
