--- a/project-lineForWalk.html
+++ b/project-lineForWalk.html
@@ -81,7 +81,7 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Taking a Phone for a Walk</h3>
-							<p class="project-desc">2015, inkjet prints, somerset paper, 55x30cm
+							<p class="project-desc">2015, giclee print on somerset 255gsm velvet paper, 25x10 inches
 
 </p>
 
