stories formatting - comment selima

--- a/project-zizi-show.html
+++ b/project-zizi-show.html
@@ -269,10 +269,10 @@
 
 				<br><small>The Zizi Show (2020), stills from zizi.ai</small><br><br>
 
-				<iframe id="vid2" width="100%" height="360" src="https://www.youtube.com/embed/E8iYStsLF_Y"
+				<!-- <iframe id="vid2" width="100%" height="360" src="https://www.youtube.com/embed/E8iYStsLF_Y"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 				webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-				<small>Welcome to The Zizi Show</small><br><br>
+				<small>Welcome to The Zizi Show</small><br><br> -->
 
 				<iframe id="vid3" width="100%" height="360" src="https://www.youtube.com/embed/Ngpr2lUS1Bk"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
