--- a/about.html
+++ b/about.html
@@ -506,6 +506,9 @@
 
 					<h4>Articles/Press</h4>
 					<p>
+						July 2021, <a id=show target="_blank"
+						href="https://www.independent.co.uk/arts-entertainment/photography/zizi-queering-dataset-ai-drag-jake-elwes-b1876396.html">
+						Meet the artist queering AI technology</a>; Eve Watling, Independent.<br>
 						May 2021, <a id=show target="_blank"
 							href="https://www.cnet.com/news/come-to-the-deepfake-cabaret-where-ai-drag-performers-come-to-play/">
 							Come to the deepfake cabaret, where AI drag performers come to play</a>; Katie Collins,
