--- a/about.html
+++ b/about.html
@@ -255,8 +255,11 @@
 							href="https://rmitgallery.com/exhibitions/future-u/">Future U: Body / Mind / Machine</a>,
 						<b>RMIT Gallery</b>, Melbourne, Australia<br>
 
-						<b>Oct 2021</b> - <a id=show target="_blank" href="https://www.alien.com.tw/en">You and AI,</a>
+						<b>Oct 2021</b> - <a id=show target="_blank" href="https://makerfairerome.eu/en/">You and AI,</a>
 						<b>Maker Faire with (Onassis Foundation and Future Everything)</b>, Gazometro Rome, Italy<br>
+
+						<b>Oct 2021 - 2022</b> - <a id=show target="_blank" href="https://dublin.sciencegallery.com/">BIAS,</a>
+						<b>Science Gallery Dublin</b>, Dublin, Ireland<br>
 
 						<b>Oct 2021</b> - <a id=show target="_blank"
 							href="http://lcfi.ac.uk/events/critical-borders/">Critical Borders: Radical (Re)visiions of
