--- a/about.html
+++ b/about.html
@@ -183,8 +183,7 @@
 					Futures Institute, UK; Zabludowicz Collection, London; Frankfurter Kunstverein, Germany; New
 					Contemporaries 2017, UK; Ars Electronica 2017, Austria; Victoria and Albert Museum, London; LABoral
 					Centro, Spain; Nature Morte, Delhi, India; RMIT Gallery, Australia; Centre for the Future of
-					Intelligence, UK and he has been
-					featured on ZDF &amp; BBC.
+					Intelligence, UK and he has been featured on TV: ZDF aspekte (Germany) and the BBC Arts (UK).
 
 				</p>
 
