--- a/project-zizi-and-me.html
+++ b/project-zizi-and-me.html
@@ -154,8 +154,8 @@
 				<iframe id="vid" width="100%" height="360" src="https://www.youtube.com/embed/vtpVr5KVvnk"
 					frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 					webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-				<small>Zizi & Me (preview) - Anything You Can Do (I Can Do Better), Digital Video, 2020<br>
-					<small>Created by Jake Elwes <br>
+				<small>Zizi & Me - Anything You Can Do (I Can Do Better), Digital Video, 2020<br>
+					<small>Created by Jake Elwes and Me the Drag Queen<br>
 						Performance - <a id="show" target="_blank"
 							href="https://www.instagram.com/methedragqueen/">Me</a> <br>
 						Cinematographer - <a id="show" target="_blank" href="https://www.tobyelwes.com/">Toby Elwes</a>
