--- a/project-zizi-and-me.html
+++ b/project-zizi-and-me.html
@@ -90,7 +90,7 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Zizi & Me</h3>
-							<p class="project-desc">2020, multimedia - performance & video installation (ongoing)
+							<p class="project-desc">2020, multimedia - performance & video installation (ongoing) <br> Collaboration with <i>Me the Drag Queen</i>
 							</p>
 
 							<p>
