--- a/about.html
+++ b/about.html
@@ -212,7 +212,6 @@
 				<a id=show target="_blank" href="https://www.ucl.ac.uk/slade/shows/2017/ba_bfa/elwes">Slade School of
 					Fine Art (UCL)</a> |
 					<a id=show target="_blank" href="https://www.fotomuseum.ch/en/events-post/screen-walk-mit-jake-elwes-zizi-und-me/">Fotomuseum Winterthur</a> |
-				<a id=show target="_blank" href="https://archive.aec.at/media/assets/acf18ed26b28936919344f3434573608.pdf">Ars Electronica p.73+117</a> |
 				<a id=show target="_blank" href="https://www.artrabbit.com/people/jakeelwes/artist">Art Rabbit</a> |
 				<a id=show target="_blank" href="https://www.artsy.net/artist/jake-elwes">Artsy</a> |
 				<a id=show target="_blank" href="https://www.fkv.de/en/jake-elwes/">Frankfurter Kunstverein</a> |
@@ -242,12 +241,12 @@
 					<p>
 						Born 1993, London UK. <br><br>
 
-						<b>Slade School of Fine Art (UCL)</b>, BA (Hons) - Fine Art, 2013-2017<br>
+						<b>Slade School of Fine Art (UCL)</b>, BA (Hons) - Fine Art, 2013 - 2017<br>
 						<b>School of the Art Institute Chicago</b>, International Exchange - Art &amp;
 						Technology, 2015 <br>
-						<b>Central St Martins (UAL)</b>, Foundation, 2012-2013<br><br>
+						<b>Central St Martins (UAL)</b>, Foundation, 2012 - 2013<br><br>
 						<b>The Artist Development Agency</b>, Steve Fletcher (formally Carroll / Fletcher Gallery,
-						London), 2017-2019<br><br>
+						London), 2017 - 2019<br><br>
 						<b>Visiting Lecturer</b>, Slade School of Fine Art (UCL), 2021 -<br><br>
 					</p>
 
@@ -286,7 +285,10 @@
 							href="https://www.alien.com.tw/en">Rehearsing the Future: Dance with Nonhuman</a>, <b>ALIEN
 							Art Centre</b>, Taiwan<br>
 
-						<b>2021-2022</b> -
+							<b>Dec 2021 - Mar 2022</b> - <a id=show target="_blank"
+							href="https://mamm-mdf.ru/en/museum/info/">Art for the Future</a>, <b>Multimedia Art Museum, Moscow (MAMM)</b>, Russia<br>
+
+						<b>Dec 2021 - Aug 2022</b> -
 						<a id=show target="_blank" href="https://zkm.de/"> »Biomedia«, </a>
 						<b>ZKM | Center for Art and Media (coming soon)</b>, Karlsruhe, Germany<br>
 
@@ -434,7 +436,7 @@
 									href="https://ars.electronica.art/ai/en/machine-learning-porn/">Artificial Intimacy
 									Exhibition</a> &amp; <a id=show target="_blank"
 									href="https://www.aec.at/ai/en/ars-electronica-gallery-spaces/">TADA Gallery
-									Space</a>, <b>Ars Electronica, POSTCITY</b>, Linz, Austria <br>
+									Space</a> | <a id=show target="_blank" href="https://archive.aec.at/media/assets/acf18ed26b28936919344f3434573608.pdf">(catalogue p.73 + 117),</a> <b>Ars Electronica, POSTCITY</b>, Linz, Austria <br>
 								<a id=show target="_blank"
 									href="https://www.mobiliar.ch/die-mobiliar/engagement/kunst-und-kultur/ausstellungen-und-fuehrungen/kunst-und-nachhaltigkeit-vol-8">
 									Digital/Real – How Art Surfs Between Worlds</a>, <b>Mobiliar Headquarters</b>, Bern,
