--- a/project-latentSpace.html
+++ b/project-latentSpace.html
@@ -144,37 +144,48 @@
 					$(window).resize(resizeDivs);
 				</script>
 
-				<h3 class="border-top" style="padding-bottom: 15px;">2021 Iteration</h3>
-
-				<iframe id="vid21"
-					src="https://player.vimeo.com/video/563521786?&loop=1&title=0&byline=0&portrait=0"
+				<iframe id="vid" src="https://player.vimeo.com/video/219526743?loop=1&title=0&byline=0&portrait=0"
 					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
 					allowfullscreen></iframe>
+				<br>
 
-					<p><small>Installlation for <a id=show target="_blank" href="https://www.sculptureinthecity.org.uk/artworks/latent-space/">Sculpture In The City, 2021.</a></small></p>
-					<p style="margin-top: 10px;"><small>For this 6 hour iteration, a new soundscape by <a id=show target="_blank" href="https://open.spotify.com/artist/4PK6Yoxg2Ba8C2KQbysQkM">The Analog Girl</a> was commissioned in partnership with <a id=show target="_blank" href="https://www.mscty.space/project/latent-space">MSCTY</a> x <a id=show target="_blank" href="https://www.sculptureinthecity.org.uk/artworks/latent-space/">Sculpture in the City.</a></small></p>
-					
-					<img src="images/project-latentSpace/Latent Space 2021 Sculpture in the city.jpg" alt="Jake Elwes digital artist Latent Space 2021 Sculpture in the city" />
-					<img style="width: 49.5%;" src="images/project-latentSpace/Latent Space 2021 Sculpture in the city portrait.jpg" alt="Jake Elwes digital artist Latent Space 2021 Sculpture in the city" />
-					<img style="width: 49.5%;" src="images/project-latentSpace/Latent Space 2021 Sculpture in the city portrait 2.jpeg" alt="Jake Elwes digital artist Latent Space 2021 Sculpture in the city" />
+
+				<p><small>Installlation for <a id=show target="_blank"
+							href="https://www.sculptureinthecity.org.uk/artworks/latent-space/">Sculpture In The City,
+							2021.</a></small></p>
+				<p style="margin-top: 10px;"><small>For this 6 hour iteration, a new soundscape by <a id=show
+							target="_blank" href="https://open.spotify.com/artist/4PK6Yoxg2Ba8C2KQbysQkM">The Analog
+							Girl</a> was commissioned in partnership with <a id=show target="_blank"
+							href="https://www.mscty.space/project/latent-space">MSCTY</a> x <a id=show target="_blank"
+							href="https://www.sculptureinthecity.org.uk/artworks/latent-space/">Sculpture in the
+							City.</a></small></p>
+
+				<img src="images/project-latentSpace/Latent Space 2021 Sculpture in the city.jpg"
+					alt="Jake Elwes digital artist Latent Space 2021 Sculpture in the city" />
+				<img style="width: 49.5%;"
+					src="images/project-latentSpace/Latent Space 2021 Sculpture in the city portrait.jpg"
+					alt="Jake Elwes digital artist Latent Space 2021 Sculpture in the city" />
+				<img style="width: 49.5%;"
+					src="images/project-latentSpace/Latent Space 2021 Sculpture in the city portrait 2.jpeg"
+					alt="Jake Elwes digital artist Latent Space 2021 Sculpture in the city" />
 
 				<br><br>
 
-				<h3 class="border-top">2017 Iteration</h3>
-				<br>
-				<iframe id="vid"
-					src="https://player.vimeo.com/video/219526743?loop=1&title=0&byline=0&portrait=0"
-					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
-					allowfullscreen></iframe>
-				<br>
+
+
 
 				<!-- <video controls autoplay loop  style="width: 100%;">
 					  <source src="images/project-latentSpace/latentSpace.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video> -->
+					<h3 class="border-top" style="padding-bottom: 15px;">2021 Iteration | soundscape by The Analog Girl</h3>
+
+					<iframe id="vid21" src="https://player.vimeo.com/video/563521786?&loop=1&title=0&byline=0&portrait=0"
+					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
+					allowfullscreen></iframe>
 
 
-
+				<br>
 				<br>
 				<img src="images/project-latentSpace/latent2.jpg" alt="Jake Elwes digital artist" />
 
@@ -184,12 +195,15 @@
 				<!-- <img src="images/project-latentSpace/Latent Install.jpg" alt="Jake Elwes digital artist" /> -->
 				<!-- <small> Installation shot from Slade Degree Show, 2017</small> -->
 				<!-- <img src="images/project-latentSpace/Latent Install2.jpg" alt="Jake Elwes digital artist" /> -->
+
+
+			
 				<br><br>
 				<iframe id="vid2" width="100%" height="360" src="https://www.youtube.com/embed/uIBBIKRAwl4"
 					frameborder="0" allowfullscreen></iframe>
 				<br>
-				<small><a id="show" href="www.gregory-white.co.uk">Gregory White</a> Modular Synth Performance - <a
-						id="show" href="gregwht.bandcamp.com">Bandcamp,</a> Slade (UCL) May 2017</small>
+				<small><a id="show" target="_blank" href="https://www.gregory-white.co.uk">Gregory White</a> Modular Synth Performance - <a
+						id="show" target="_blank" href="https://gregwht.bandcamp.com">Bandcamp,</a> Slade (UCL) May 2017</small>
 				<br>
 				<br>
 
