--- a/project-zizi-show.html
+++ b/project-zizi-show.html
@@ -108,6 +108,7 @@
 								website and play with which deepfake bodies perform which songs. At times this breaks
 								down when the A.I. tries to conceive impossible positions or combines multiple different
 								queer identities; it can even reveal the skeleton tracking the deepfake is built on.
+								The deepfakes were created collaboratively in celebration, resisting the exploitative and oppressive nature of deepfakes.
 								The Zizi Show constructs and then deconstructs a virtual cabaret that pushes the limits
 								of what can be imagined on a digital stage.
 							</p>
