--- a/project-zizi-2019.html
+++ b/project-zizi-2019.html
@@ -97,7 +97,7 @@
 								‘Zizi - Queering the Dataset’ aims to tackle the lack of representation and diversity in
 								the training datasets often used by facial recognition systems. The video was made by
 								disrupting these systems<small>*</small> and re-training them with the
-								addition of drag and gender fluid faces found online. This causes the weights inside the
+								addition of 1000 images of drag and gender fluid faces found online. This causes the weights inside the
 								neural network to shift away from the normative identities it was originally trained on
 								and into a space of queerness. ‘Zizi - Queering The Dataset’ lets us peek inside the
 								machine learning system and visualise what the neural network has (and hasn’t) learnt.
