--- a/about.html
+++ b/about.html
@@ -258,11 +258,11 @@
 							History of the Future</a>, <b>ZKM | Center for Art and Media</b>, Karlsruhe, Germany<br>
 
 						<b>2021 - Summer 2022</b> - <a id=show target="_blank"
-							href="https://www.sculptureinthecity.org.uk/">Latent Space at 120 Fencurch Street,
+							href="https://www.sculptureinthecity.org.uk/artworks/latent-space/">Latent Space at 120 Fencurch Street,
 						</a><b>Sculpture in the City, </b>City of London’s
 						annual programme of public artworks, UK <br>
 
-						<b>2021 - Jun to Oct</b> - <a id=show target="_blank"
+						<b>2021 - March 2022</b> - <a id=show target="_blank"
 							href="https://rmitgallery.com/exhibitions/future-u/">Future U: Body / Mind / Machine</a>,
 						<b>RMIT Gallery</b>, Melbourne, Australia<br>
 
@@ -286,7 +286,7 @@
 							Art Centre</b>, Taiwan<br>
 
 							<b>Dec 2021 - Mar 2022</b> - <a id=show target="_blank"
-							href="https://mamm-mdf.ru/en/museum/info/">Art for the Future</a>, <b>Multimedia Art Museum, Moscow (MAMM)</b>, Russia<br>
+							href="https://mamm-mdf.ru/en/museum/">Art for the Future</a>, <b>Multimedia Art Museum, Moscow (MAMM)</b>, Russia<br>
 
 						<b>Dec 2021 - Aug 2022</b> -
 						<a id=show target="_blank" href="https://zkm.de/"> »Biomedia«, </a>
