--- a/about.html
+++ b/about.html
@@ -521,6 +521,26 @@
 					<h4>Publications</h4>
 					<p>
 
+						Andreas J. Hirsch, Marcus Jandl, Gerfried Stocker (2021). <b>The Practice of Art and AI</b>. Ars Electronica, Austria: Hantje Cantz Verlag.<br>
+						Simone Chen (2021). <b>IDEAT 理想家 - The Book of Sand</b>. Shanghai: IDEAT Publishers<br>
+						Marcus Jandl, Gerfried Stocker (2021). <b>A New Digital Deal</b>. Ars Electronica, Austria: Hantje Cantz Verlag.<br>
+
+						Lans Harmsen (2021). <b>Slanted 37 - A.I.</b>. Karlsruhe, Germany: Slanted Publishers<br>
+
+						Martin Zeilinger (2021). <b>Tactical Entanglements: AI Art, Creative Agency, and the Limits of Intellectual Property</b>. Lüneburg, Germany: meson press<br>
+
+						Jimmy Huang (2021). <b>Jake Elwes: Constructing and Deconstructing Gender with AI-Generated Art</b>. The Montreal AI Ethics Institute (online)
+
+
+						Kanta Dihal, Sarah Dillon, Stephen Cave (2020). <b>AI Narratives: A History of Imaginative Thinking about Intelligent Machines</b>.
+						Oxford, UK: Oxford University Press.<br>
+
+						Gianmaria Ajani (2020). <b>Contemporary Artificial Art and the Law</b>.
+						Leiden, Netherlands: Brill.<br>
+
+						Paul Luckraft (2020). <b>Zabludowicz Collection Invites Vol 2</b>. Cassochrome: Belgium<br>
+
+						Drew Hemment (2019). <b>Preternatural : An exhibition of works by Jake Elwes </b>. Edinburgh College of Art: Experiential AI<br>
 
 						Arthur Miller (2019). <b>The Artist in the Machine: The World of AI-Powered Creativity</b>.
 						Cambridge, Massachusetts: MIT Press.<br>
@@ -536,15 +556,15 @@
 						Tom Mouna (2019). <b>Mining the machine Long Xinru</b>. Hong Kong: ArtAsiaPacific, No. 114, Jul
 						2019<br>
 
-						Marykate Regan (2019). <b>Generative Adversarial Networks & The Art Market</b> New York: Fashion
+						Marykate Regan (2019). <b>Generative Adversarial Networks & The Art Market</b>. New York: Fashion
 						Institute of Technology Publishing.<br>
 
-						Irini Papadimitriou (2018). <b>Artificially Intelligent</b> London: Victoria &amp; Albert
+						Irini Papadimitriou (2018). <b>Artificially Intelligent</b>. London: Victoria &amp; Albert
 						Museum<br>
 
-						Hannes Leopoldseder, Christine Schöpf, Gerfried Stocker (2017).<b>Ars Electronica 2017</b>.<br>
+						Hannes Leopoldseder, Christine Schöpf, Gerfried Stocker (2017). <b>Artificial Intelligence – the Other I</b>. Ars Electronica, Austria: Hantje Cantz Verlag.<br>
 
-						Caroline Achaintre, Elizabeth Price, and George Shaw (2017).<b>Bloomberg New Contemporaries
+						Caroline Achaintre, Elizabeth Price, and George Shaw (2017).<b> Bloomberg New Contemporaries
 							2017</b>. New Contemporaries (1988) Ltd.<br>
 
 
