--- a/about.html
+++ b/about.html
@@ -520,7 +520,7 @@
 
 					<h4>Publications</h4>
 					<p>
-
+						Rebecca Pedrazzi, (2021). <b>Possible futures</b>. Milan, Italy: Jaca Books.<br>
 						Andreas J. Hirsch, Marcus Jandl, Gerfried Stocker (2021). <b>The Practice of Art and AI</b>. Ars Electronica, Austria: Hantje Cantz Verlag.<br>
 						Simone Chen (2021). <b>IDEAT 理想家 - The Book of Sand</b>. Shanghai: IDEAT Publishers<br>
 						Marcus Jandl, Gerfried Stocker (2021). <b>A New Digital Deal</b>. Ars Electronica, Austria: Hantje Cantz Verlag.<br>
@@ -540,13 +540,13 @@
 
 						Paul Luckraft (2020). <b>Zabludowicz Collection Invites Vol 2</b>. Cassochrome: Belgium<br>
 
+						André-Louis Paré, Andreas Broeckmann (2020). <b>CREATING IN THE ERA OF ARTIFICIAL
+							INTELLIGENCE</b>. ESPACE Art Actuel.<br>
+
 						Drew Hemment (2019). <b>Preternatural : An exhibition of works by Jake Elwes </b>. Edinburgh College of Art: Experiential AI<br>
 
 						Arthur Miller (2019). <b>The Artist in the Machine: The World of AI-Powered Creativity</b>.
 						Cambridge, Massachusetts: MIT Press.<br>
-
-						André-Louis Paré, Andreas Broeckmann (2020). <b>CREATING IN THE ERA OF ARTIFICIAL
-							INTELLIGENCE</b>. ESPACE Art Actuel.<br>
 
 						Peter Weibel (2019). <b>Open codes. Living in digital worlds</b>. Esslingen: Edition Cantz.<br>
 
