--- a/about.html
+++ b/about.html
@@ -191,12 +191,15 @@
 						Currently represented in Europe, Middle East & Asia by <a id=show target="_blank"
 							href="https://gazelliarthouse.com/artists/jake-elwes/overview/">Gazelli Art House</a>, 39
 						Dover Street, Mayfair London
-					</b><br>
-					Enquiries:
-
+					</b></p>
+					<p>
+					Gazelli Art House <br>
 					<a id="show" href="mailto:sales@gazelliarthouse.com?Subject=Contact" target="_top"
-						class="btn-social btn-outline">Gallery Email</a>
-					|
+					class="btn-social btn-outline">info@gazelliarthouse.com</a>
+					<br>+ 44 207 491 8816
+					</p>
+					<p>
+					Other Enquiries:
 
 					<a id="show" href="mailto:contaxct@jakxeelwesx.coxm?Subject=Contact"
 						onmouseover="this.href=this.href.replace(/x/g,'');" target="_top"
