--- a/about.html
+++ b/about.html
@@ -194,7 +194,7 @@
 					</b></p>
 					<p>
 					Gazelli Art House <br>
-					<a id="show" href="mailto:sales@gazelliarthouse.com?Subject=Contact" target="_top"
+					<a id="show" href="mailto:info@gazelliarthouse.com?Subject=Contact" target="_top"
 					class="btn-social btn-outline">info@gazelliarthouse.com</a>
 					<br>+ 44 207 491 8816
 					</p>
