--- a/about.html
+++ b/about.html
@@ -555,7 +555,7 @@
 
 					</p> -->
 
-					<h4>Publications</h4>
+					<h4>Published Works Referenced In</h4>
 					<p>
 						Rebecca Pedrazzi, (2021). <b>Possible futures</b>. Milan, Italy: Jaca Books.<br>
 						Andreas J. Hirsch, Marcus Jandl, Gerfried Stocker (2021). <b>The Practice of Art and AI</b>. Ars
