--- a/project-zizi-and-me.html
+++ b/project-zizi-and-me.html
@@ -90,16 +90,16 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Zizi & Me</h3>
-							<p class="project-desc">2020, multimedia - performance & video installation (ongoing) <br> Collaboration with <i>Me the Drag Queen</i>
+							<p class="project-desc">2020, multimedia - performance & video installation (ongoing) <br> Collaboration with <i><a id="show" target="_blank"
+								href="https://www.instagram.com/methedragqueen/">Me the Drag Queen</a></i>
 							</p>
 
 							<p>
-								‘Zizi & Me’ is a double act between drag queen <a id="show" target="_blank"
-									href="https://www.instagram.com/methedragqueen/">Me</a>, and a deep fake (A.I.)
-								clone of Me. We trained a neural network<small>*</small> on filmed footage.
+								‘Zizi & Me’ is a double act between drag queen 'ME the Drag Queen', and a deep fake (A.I.)
+								clone of 'ME the Drag Queen'. We trained a neural network<small>*</small> on filmed footage.
 								This network learnt to construct a virtual body that can be controlled by feeding it new
-								reference movements. Through drag performance, this artwork aims to use cabaret and
-								musical theatre to challenge narratives surrounding A.I. and society.
+								reference movements. For our first act we chose a well known musical theatre song 'Anything You Can Do (I Can Do Better)’ as an amusing way of satirising the idea that an AI is something that we might mistake for a human. Through drag performance, we aim to use cabaret and
+								musical theatre to challenge narratives surrounding A.I. and society. 
 
 							</p>
 							<p><small><small>
