--- a/project-zizi-and-me.html
+++ b/project-zizi-and-me.html
@@ -95,10 +95,10 @@
 							</p>
 
 							<p>
-								‘Zizi & Me’ is a double act between drag queen 'ME the Drag Queen', and a deep fake (A.I.)
+								‘Zizi & Me’ is a double act between drag queen 'ME the Drag Queen', and a deepfake (A.I.)
 								clone of 'ME the Drag Queen'. We trained a neural network<small>*</small> on filmed footage.
 								This network learnt to construct a virtual body that can be controlled by feeding it new
-								reference movements. For our first act we chose a well known musical theatre song 'Anything You Can Do (I Can Do Better)’ as an amusing way of satirising the idea that an AI is something that we might mistake for a human. Through drag performance, we aim to use cabaret and
+								reference movements. Through drag performance, we aim to use cabaret and
 								musical theatre to challenge narratives surrounding A.I. and society. 
 
 							</p>
