--- a/project-zizi-2019.html
+++ b/project-zizi-2019.html
@@ -105,8 +105,7 @@
 								bias in our data driven society.
 							</p>
 							<p><small><small>
-										*A Style-Based Generator Architecture for Generative Adversarial Networks
-										(2019)</p></small></small>
+										*StyleGan (2019) trained on FFHQ (2018) containing 70,000 photographs of faces</p></small></small>
 							<p>
 							<p class="border-top">
 								<i>The Zizi Project (2019 - ongoing) is a collection of works by Jake Elwes exploring
